<resources>
    <string name="app_name">LanguageApp</string>
    <string name="Hello">Hello</string>
    <string name="Error">Error</string>
    <string name="Next">Next</string>
    <string name="More">More</string>
    <string name="Choose_a_language">Choose a language</string>
    <string name="Some_data_wrong">Some data wrong</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="your_first_name">Your First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="what_is_your_mother_language">What is your Mother language?</string>
    <string name="points">points</string>
    <string name="please_press_button_and_say_this_word_our_service_will_check_your_pronunciation">"Please press button and say this word. Our service will check your pronunciation "</string>
    <string name="check_my_speech">Check my speech</string>
    <string name="confidence_in_your_words">Confidence in your words</string>
    <string name="take_your_time_to_learn">Take your time to learn</string>
    <string name="the_lessons_you_need_to_learn">The lessons you need to learn</string>
    <string name="with_conversation_based_learning_you_ll_be_talking_from_lesson_one">With conversation-based learning, you\'ll be talking from lesson one</string>
    <string name="develop_a_habit_of_learning_and_make_it_a_part_of_your_daily_routine">Develop a habit of learning and make it a part of your daily routine</string>
    <string name="using_a_variety_of_learning_styles_to_learn_and_retain">Using a variety of learning styles to learn and retain</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="kazakh">Kazakh</string>
    <string name="chinese">Chinese</string>
    <string name="japan">Japan</string>
    <string name="belarus">Belarus</string>
    <string name="language_select">Language select</string>
    <string name="choose">Choose</string>
    <string name="skip_onboarding">Skip onboarding</string>
    <string name="login">Login</string>
    <string name="for_free_join_now_and_start_learning">For free, join now\nand start learning</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_you_member">"Not you member? "</string>
    <string name="signup">SignUp</string>
    <string name="continue_btn">Continue</string>
    <string name="i">"I "</string>
    <string name="have_made_myself_acquainted_with_the_rules">have made myself acquainted with the Rules</string>
    <string name="and_accept_all_its_provisions">_and accept all its provisions,</string>
    <string name="already_you_member">"Already you member? "</string>
    <string name="switch_to_dark">Switch to Dark</string>
    <string name="change_mother_language">Change mother language</string>
    <string name="change_your_image">Change your image</string>
    <string name="logout">Logout</string>
    <string name="your_profile">"Your profile, "</string>
    <string name="your_photo_is_gorgeous">Your photo is gorgeous!</string>
    <string name="just_resize_that_photo_for_fit_in_square">Just resize that photo\nfor fit in square</string>
    <string name="use_that_image">Use that image</string>
    <string name="word_practice">Word practice</string>
    <string name="check">Check</string>
    <string name="no_internet_connection">"No \ninternet connection "</string>
    <string name="check_again">Check again</string>
    <string name="listening">Listening</string>
    <string name="your_result">Your result</string>
    <string name="yay_go_next">Yay! Go next</string>
    <string name="guess_the_animal">Guess the animal</string>
    <string name="write_who_is_on_image">Write who is on image</string>
    <string name="holy_molly_that_is_right">Holy Molly! That is Right!</string>
    <string name="eh_wrong_answer_that_is">"Eh? Wrong answer :(\n That is: "</string>
    <string name="next">Next</string>
    <string name="try_again">Try again</string>
    <string name="audition">Audition</string>
    <string name="game">Game</string>
    <string name="are_you_ready_for_learning_today">Are you ready for learning today?</string>
    <string name="top_users">Top users</string>
    <string name="available_excersises">Available excersises</string>
    <string name="switch_to_light">Switch to Light</string>
    <string name="start_activity">start activity</string>
</resources>