package com.example.languageapp.feature_app.presentation.common

import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.material3.Button
import androidx.compose.material3.ButtonDefaults
import androidx.compose.material3.MaterialTheme
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp

@Composable
fun CustomButton(
    text: String,
    modifier: Modifier = Modifier,
    background: Color = MaterialTheme.colorScheme.secondary,
    enabled: Boolean = true,
    tag: String = "btn",
    onClick: () -> Unit
) {
    Button(
        onClick = onClick,
        modifier = modifier
            .testTag(tag),
        enabled = enabled,
        shape = RoundedCornerShape(12.dp),
        colors = ButtonDefaults.buttonColors(background)
    ) {
        Text(
            text = text,
            style = MaterialTheme.typography.bodyMedium.copy(
                Color.White
            )
        )
    }
}