...
                Spacer(Modifier.weight(2f))
                Image(
                    painter = painterResource(state.list[page].image),
                    contentDescription = null,
                    modifier = Modifier
                        .fillMaxWidth(0.65f)
                        .testTag("img"),
                    contentScale = ContentScale.Crop
                )

                Spacer(Modifier.weight(2f))

                CustomPagerCircleState(
...
